gateway/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ordering-api-service
spec:
  selector:
    app: ordering-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
