gateway/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigateway
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: 'subnet-08968acd8ab666264,subnet-0a6e13fd2faeb8d2f'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:             
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: auth-api-service
              port:
                number: 8071
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: authapi
#   annotations:
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/subnets: 'subnet-08968acd8ab666264,subnet-0a6e13fd2faeb8d2f'
# spec:
#   ingressClassName: alb
#   rules:
#     - http:
#         paths:
#         - path: /
#           pathType: Prefix
#           backend:
#               service:
#                 name: auth-api-service
#                 port:
#                   number: 8071
